# ParametricParticles

./: README.md
Sources/ClipUnion/: ClipUnion.cpp  ClipUnion.h
Sources/Graph/: CMakeLists.txt  TangoIconLibrary_LICENSE  functiongenerator.cpp  functiongenerator.h  functiongenerator.ui  graph.cpp  graph.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc  scaletranslatedialog.cpp  scaletranslatedialog.h  scaletranslatedialog.ui  wres.rc
Sources/OutlineMP/: Outline.es  ParticleDisasm.cpp  ParticleDisasm.h  VertexUtils.cpp  VertexUtils.h  VertexUtils.hxx
Sources/ParametricParticlesMP/: AutoHeightMap.es  ParametricParticles.es  ParticleRotation.es  ParticleVelocity.es  Particles.cpp  Particles.h  SpawnShapeBase.es  SpawnShapeBox.es  SpawnShapeCylinder.es  SpawnShapeSphere.es  WeakPointer.cpp  WeakPointer.h
Sources/ParametricParticlesMP/StdH/: StdH.cpp  StdH.h
Sources/ParametricParticlesUtils/: API.h  ParticlesUtils.cpp  ParticlesUtils.h
